--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,43 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* hide-scrollbar.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+@layer utilities {
+  .animate-slide-in-right {
+    animation: slide-in-right 0.7s ease-in-out forwards;
+  }
+  .animate-slide-in-left {
+    animation: slide-in-left 0.7s ease-in-out forwards;
+  }
+
+  @keyframes slide-in-right {
+    0% {
+      transform: translateX(100%);
+      
+    }
+    100% {
+      transform: translateX(0%);
+      /* opacity: 1; */
+    }
+  }
+
+  @keyframes slide-in-left {
+    0% {
+      transform: translateX(-100%);
+      /* opacity: 0; */
+    }
+    100% {
+      transform: translateX(0%);
+      /* opacity: 1; */
+    }
+  }
+}
