--- a/app/globals.css
+++ b/app/globals.css
@@ -90,3 +90,29 @@ body {
 .sidebar-slide-out {
   animation: sidebarSlideOut 0.4s ease-in-out forwards;
 }
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(100%)
+  }
+  100% {
+    transform: translateX(0)
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0)
+  }
+  100% {
+    transform: translateX(100%)
+  }
+}
+
+.slideIn{
+  animation: slideIn 0.4s forwards,
+}
+
+.slideOut{
+  animation: slideOut 0.4s forwards
+}
